--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -55,6 +55,7 @@
                 
                      </td>
                         <td id="navbar"><a href="{{site.baseurl}}/">Home</a></td>
+                        <td id="navbar"><a href="{{site.baseurl}}/astronet">AstroNet</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/posts">Chat</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/choose_classes/">Classes</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/profile">${data.name}</a></td>
