--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -57,7 +57,7 @@
                         <td id="navbar"><a href="{{site.baseurl}}/">Home</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/astronet">AstroNet</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/posts">Chat</a></td>
-                        <td id="navbar"><a href="{{site.baseurl}}/choose_classes/">Classes</a></td>
+                        <td id="navbar"><a href="{{site.baseurl}}/schedule/">Classes</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/profile">${data.name}</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/logout">Logout</a></td>
                         <td id="navbar"><a href="{{site.baseurl}}/ai_homework_bot/">Homework Help</a></td>
