--- a/_includes/theme/minima/base.html
+++ b/_includes/theme/minima/base.html
@@ -13,7 +13,7 @@
       });
 
       if (!_authed && !window.location.href.endsWith("login")) {
-        window.location.href = '/{{ site.baseurl }}/login';
+        window.location.href = '/flocker_frontend/login';
       }
     });
   </script>
