--- a/_includes/theme/minima/base.html
+++ b/_includes/theme/minima/base.html
@@ -1,25 +1,64 @@
 {%- include head.html -%}
 
 <body>
-  <script>
-    let _authed;
-    document.addEventListener("DOMContentLoaded", function () {
-      let cookies = document.cookie.split("; ");
-      cookies.forEach((cookie) => {
-        const [key, value] = cookie.split("=");
-        if (key === "jwt_python_flask") {
-          _authed = true;
-        }
-      });
-
-      if (!_authed && !window.location.href.endsWith("login")) {
-        window.location.href = "/neptune_frontend/login";
-      }
-    });
-  </script>
   {%- include header.html -%}
 
   <main class="page-content" aria-label="Content">
+    <div class="line-drawing-demo" id="logo">
+      <svg viewBox="0 0 280 100">
+        <g
+          fill="none"
+          fill-rule="evenodd"
+          stroke="currentColor"
+          stroke-width="1"
+          class="lines"
+        >
+          <path
+            class="el"
+            d="M58 80V50.12C57.7 41.6 51.14 35 43 35a15 15 0 0 0 0 30h7.5v15H43a30 30 0 1 1 0-60c16.42 0 29.5 13.23 30 29.89V80H58z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="316.85528564453125"
+          ></path>
+          <path
+            class="el"
+            d="M73 80V20H58v60h15z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="150"
+          ></path>
+          <path
+            class="el"
+            d="M58 80V49.77C58.5 33.23 71.58 20 88 20a30 30 0 0 1 30 30v30h-15V50a15 15 0 0 0-15-15c-8.14 0-14.7 6.6-15 15.12V80H58zm75 0V20h-15v60h15z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="441.1739501953125"
+          ></path>
+          <path
+            class="el"
+            d="M118 80V49.77C118.5 33.23 131.58 20 148 20a30 30 0 0 1 30 30v30h-15V50a15 15 0 0 0-15-15c-8.14 0-14.7 6.6-15 15.12V80h-15zm-7.5-60a7.5 7.5 0 1 1-7.48 8v-1c.25-3.9 3.5-7 7.48-7z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="338.3053894042969"
+          ></path>
+          <path
+            class="el"
+            d="M133 65a15 15 0 0 1-15-15v-7.5h-15V50a30 30 0 0 0 30 30V65zm30 15V49.77C163.5 33.23 176.58 20 193 20a30 30 0 0 1 30 30v30h-15V50a15 15 0 0 0-15-15c-8.14 0-14.7 6.6-15 15.12V80h-15z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="406.8699035644531"
+          ></path>
+          <path
+            class="el"
+            d="M238 65a15 15 0 0 1 0-30c8.1 0 14.63 6.53 15 15h-15v15h30V49.89C267.5 33.23 254.42 20 238 20a30 30 0 0 0 0 60V65z"
+            style="stroke-dashoffset: 0px"
+            stroke-dasharray="301.8561706542969"
+          ></path>
+          <path
+            class="el"
+            d="M260.48 65a7.5 7.5 0 1 1-7.48 8v-1c.26-3.9 3.5-7 7.48-7z"
+            style="stroke-dashoffset: 1.15485px"
+            stroke-dasharray="47.128875732421875"
+          ></path>
+        </g>
+      </svg>
+    </div>
+
     <div class="wrapper">{{ content }}</div>
   </main>
 
@@ -75,4 +114,69 @@
       /* Removes borders around individual cells */
     }
   </style>
+
+  <script src="/neptune_frontend/assets/js/anime.min.js"></script>
+  <script defer>
+    let _authed;
+    document.addEventListener("DOMContentLoaded", function () {
+      document.getElementsByClassName("wrapper")[1].style.opacity = 0;
+      document.querySelector("header").style.opacity = 0;
+      document.querySelector("footer").style.opacity = 0;
+
+      let cookies = document.cookie.split("; ");
+      cookies.forEach((cookie) => {
+        const [key, value] = cookie.split("=");
+        if (key === "jwt_python_flask") {
+          _authed = true;
+        }
+      });
+
+      if (!_authed && !window.location.href.endsWith("login")) {
+        window.location.href = "/neptune_frontend/login";
+      }
+
+      anime({
+        targets: ".line-drawing-demo .lines path",
+        strokeDashoffset: [anime.setDashoffset, 0],
+        easing: "easeInOutSine",
+        duration: 1500,
+        delay: function (el, i) {
+          return i * 250;
+        },
+        direction: "alternate",
+        loop: false,
+        complete: function () {
+          setTimeout(() => {
+            anime({
+              targets: ".wrapper",
+              opacity: [0, 1],
+              duration: 1000,
+              easing: "easeInOutQuad",
+            });
+            anime({
+              targets: "header",
+              opacity: [0, 1],
+              duration: 1000,
+              easing: "easeInOutQuad",
+            });
+            anime({
+              targets: "footer",
+              opacity: [0, 1],
+              duration: 1000,
+              easing: "easeInOutQuad",
+            });
+            anime({
+              targets: "#logo",
+              opacity: [1, 0],
+              duration: 1000,
+              easing: "easeInOutQuad",
+              complete: function () {
+                document.getElementById("logo").style.display = "none";
+              }
+            });
+          }, 500);
+        },
+      });
+    });
+  </script>
 </body>
